--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.0.1",
 	"main": "module/main.js",
 	"dependencies": {
-		"@types/node": "^14.14.22"
+		"@types/node": "^14.14.22",
+		"colors": "^1.4.0"
 	}
 }
