--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
 	"main": "module/main.js",
 	"dependencies": {
 		"@types/node": "^14.14.22",
-		"colors": "^1.4.0"
+		"@types/shelljs": "^0.8.8",
+		"colors": "^1.4.0",
+		"shelljs": "^0.8.4"
 	}
 }
