--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
 	"version": "0.0.1",
 	"main": "module/main.js",
 	"dependencies": {
+		"@types/highlight.js": "^10.1.0",
 		"@types/markdown-it": "^12.0.1",
 		"@types/node": "^14.14.22",
 		"@types/shelljs": "^0.8.8",
 		"colors": "^1.4.0",
+		"highlight.js": "^10.5.0",
 		"markdown-it": "^12.0.4",
 		"shelljs": "^0.8.4"
 	}
