started some big reorganization

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
         "inlineSources": true,
         "experimentalDecorators": true,
         "preserveConstEnums": true,
+        "esModuleInterop": true,
         "strict": true,
         "noUnusedLocals": true,
         "outDir": "./module",
