--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"@types/shelljs": "^0.8.8",
 		"chokidar": "^3.5.1",
 		"colors": "^1.4.0",
+		"limax": "^3.0.0",
 		"markdown-it": "^12.0.4",
 		"micromatch": "^4.0.2",
 		"sharp": "^0.27.1",
