--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
 	"main": "module/main.js",
 	"dependencies": {
 		"@types/chokidar": "^2.1.3",
-		"@types/markdown-it": "^12.0.1",
 		"@types/micromatch": "^4.0.1",
 		"@types/node": "^14.14.22",
+		"@types/remarkable": "^2.0.0",
 		"@types/sharp": "^0.27.1",
 		"@types/shelljs": "^0.8.8",
 		"chokidar": "^3.5.1",
 		"colors": "^1.4.0",
 		"limax": "^3.0.0",
-		"markdown-it": "^12.0.4",
 		"micromatch": "^4.0.2",
+		"remarkable": "^2.0.1",
 		"sharp": "^0.27.1",
 		"shelljs": "^0.8.4"
 	}
