--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"@types/micromatch": "^4.0.1",
 		"@types/node": "^14.14.22",
 		"@types/remarkable": "^2.0.0",
+		"@types/sass": "^1.16.0",
 		"@types/sharp": "^0.27.1",
 		"@types/shelljs": "^0.8.8",
 		"chokidar": "^3.5.1",
@@ -14,6 +15,7 @@
 		"limax": "^3.0.0",
 		"micromatch": "^4.0.2",
 		"remarkable": "^2.0.1",
+		"sass": "^1.32.6",
 		"sharp": "^0.27.1",
 		"shelljs": "^0.8.4"
 	}
