--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.0.1",
 	"main": "module/main.js",
 	"dependencies": {
+		"@types/better-sqlite3": "^5.4.1",
 		"@types/chokidar": "^2.1.3",
 		"@types/micromatch": "^4.0.1",
 		"@types/node": "^14.14.22",
@@ -10,6 +11,7 @@
 		"@types/sass": "^1.16.0",
 		"@types/sharp": "^0.27.1",
 		"@types/shelljs": "^0.8.8",
+		"better-sqlite3": "^7.1.2",
 		"chokidar": "^3.5.1",
 		"colors": "^1.4.0",
 		"limax": "^3.0.0",
