--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
 	"name": "laius",
 	"version": "0.0.1",
 	"main": "module/main.js",
+	"bin": {
+		"laius": "./module/bin.js"
+	},
 	"dependencies": {
 		"@types/better-sqlite3": "^5.4.1",
 		"@types/chokidar": "^2.1.3",
+		"@types/js-yaml": "^4.0.0",
 		"@types/micromatch": "^4.0.1",
 		"@types/node": "^14.14.22",
 		"@types/remarkable": "^2.0.0",
@@ -14,6 +18,7 @@
 		"better-sqlite3": "^7.1.2",
 		"chokidar": "^3.5.1",
 		"colors": "^1.4.0",
+		"js-yaml": "^4.0.0",
 		"limax": "^3.0.0",
 		"micromatch": "^4.0.2",
 		"remarkable": "^2.0.1",
