--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"remarkable": "^2.0.1",
 		"sass": "^1.32.6",
 		"sharp": "^0.27.1",
-		"shelljs": "^0.8.4"
+		"shelljs": "^0.8.4",
+		"v8-compile-cache": "^2.2.0"
 	}
 }
