--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"@types/better-sqlite3": "^5.4.1",
 		"@types/chokidar": "^2.1.3",
 		"@types/js-yaml": "^4.0.0",
+		"@types/micromatch": "^4.0.1",
 		"@types/node": "^14.14.22",
 		"@types/remarkable": "^2.0.0",
 		"@types/sass": "^1.16.0",
@@ -18,6 +19,7 @@
 		"chokidar": "^3.5.1",
 		"colors": "^1.4.0",
 		"js-yaml": "^4.0.0",
+		"micromatch": "^4.0.2",
 		"remarkable": "^2.0.1",
 		"sass": "^1.32.6",
 		"sharp": "^0.27.1",
