--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"@types/js-yaml": "^4.0.0",
 		"@types/micromatch": "^4.0.1",
 		"@types/node": "^14.14.22",
-		"@types/remarkable": "^2.0.0",
+		"@types/remarkable": "^2.0.1",
 		"@types/sass": "^1.16.0",
 		"@types/sharp": "^0.27.1",
 		"@types/shelljs": "^0.8.8",
@@ -25,5 +25,8 @@
 		"sharp": "^0.27.1",
 		"shelljs": "^0.8.4",
 		"v8-compile-cache": "^2.2.0"
+	},
+	"devDependencies": {
+		"typescript": "^4.2.3"
 	}
 }
