--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 	},
 	"dependencies": {
 		"@types/better-sqlite3": "^5.4.1",
+		"@types/browser-sync": "^2.26.1",
 		"@types/chokidar": "^2.1.3",
 		"@types/js-yaml": "^4.0.0",
 		"@types/node": "^14.14.22",
@@ -15,6 +16,7 @@
 		"@types/sharp": "^0.27.1",
 		"@types/shelljs": "^0.8.8",
 		"better-sqlite3": "^7.1.2",
+		"browser-sync": "^2.26.14",
 		"chokidar": "^3.5.1",
 		"colors": "^1.4.0",
 		"js-yaml": "^4.0.0",
