--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"@types/chokidar": "^2.1.3",
 		"@types/js-yaml": "^4.0.0",
 		"@types/node": "^14.14.22",
-		"@types/remarkable": "^2.0.1",
+		"@types/remarkable": "^2.0.2",
 		"@types/sass": "^1.16.0",
 		"@types/sharp": "^0.27.1",
 		"@types/shelljs": "^0.8.8",
@@ -23,7 +23,8 @@
 		"remarkable": "^2.0.1",
 		"sass": "^1.32.6",
 		"sharp": "^0.27.1",
-		"shelljs": "^0.8.4"
+		"shelljs": "^0.8.4",
+		"swl-argparse": "^0.1.1"
 	},
 	"devDependencies": {
 		"typescript": "^4.2.3"
