--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
 	"bin": {
 		"laius": "./module/bin.js"
 	},
+	"scripts": {
+		"prepublish": "tsc | wtsc"	
+	},
 	"dependencies": {
 		"@types/browser-sync": "^2.26.1",
 		"@types/chokidar": "^2.1.3",
@@ -25,6 +28,7 @@
 		"swl-argparse": "^0.1.1"
 	},
 	"devDependencies": {
-		"typescript": "^4.2.3"
+		"typescript": "^4.2.3",
+		"wtsc": "^0.1.2"
 	}
 }
