--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
 		"laius": "./module/bin.js"
 	},
 	"scripts": {
-		"prepublish": "tsc | wtsc"	
+		"prepublish": "tsc | wtsc",
+		"build": "tsc | wtsc"
 	},
 	"dependencies": {
 		"@types/browser-sync": "^2.26.1",
 		"@types/chokidar": "^2.1.3",
 		"@types/js-yaml": "^4.0.0",
 		"@types/node": "^14.14.22",
-		"@types/remarkable": "^2.0.2",
+		"@types/remarkable": "2.0.3",
 		"@types/sass": "^1.16.0",
 		"@types/sharp": "^0.27.1",
 		"@types/shelljs": "^0.8.8",
